Mon, 10 Mar 2008 16:37:38 +0100 <thp@perli.net>
Add support for creating M3U playlist files in download folders

	* src/gpodder/config.py: Add "create_m3u_playlists" boolean
	configuration option (default False) that controls if we want to
	generate per-channel M3U playlists in our download folders
	* src/gpodder/gui.py: Add context menu entry for manually updating an
	M3U playlist for the channel navigator (only visible when updating m3u
	playlists is enabled
	* src/gpodder/libpodcasts.py: Add update_m3u_playlist() function to
	podcastChannel and call it when removing and adding downloaded
	episodes
	* src/gpodder/util.py: Add sanitize_filename() function that tries to
	encode a file name in the system's encoding, stripping all chars that
	are invalid on FAT32 and other systems (e.g. slash, etc..)

Thu, 06 Mar 2008 17:46:21 +0100 <thp@perli.net>
Be less verbose, consider episodes with length<=100 to have invalid length

	* src/gpodder/libpodcasts.py: Remove verbose logging for episode
	metadata (seems to work now); consider episodes with a small length
	value to have invalid length, i.e. try to find the length of the
	episode by looking at the HTTP header; thanks to Bernd
	<schlaber@gmail.com> for sending in the feed URL with which this bug
	happens (length was 1) during the gPodder workflow survey :)

Tue, 04 Mar 2008 12:15:53 +0100 <thp@perli.net>
Fix KeyError bug in custom_selection_button_clicked (from LP)

	* src/gpodder/gui.py: Fix problem with localized strings on the custom
	selection buttons, i.e. pass the label to the function directly
	instead of relying on the gtk.Button to have the label in the correct
	encoding (LP: #192918); thanks to Pavel Mlčoch for reporting this bug
	on Launchpad

Tue, 04 Mar 2008 12:05:23 +0100 <thp@perli.net>
Fix AttributeError bug in updateTreeView (from LP)

	* src/gpodder/gui.py: Make sure that we have a valid "active_channel"
	when updating the tree view (LP: #183667); thanks to red26wings for